lazy load some settings
